fix: increase contrast in theme light

--- a/frontend/app/styles/themes/white.scss
+++ b/frontend/app/styles/themes/white.scss
@@ -20,7 +20,7 @@
 	// TEXT
 	// -------------------------------------------------------------------------
 	--text-body: #3c4450;
-	--text-primary: #3c3b3d;
+	--text-primary: #272529;
 	--text-primary-light: #3c3b3d;
 	--text-secondary: #6c7280;
 	--text-muted: #666;
